2008-01-03  Brian Gough  <bjg@network-theory.co.uk>

	* evolve.c (gsl_odeiv_evolve_apply): handle the case where
	GSL_ODEIV_HADJ_DEC does not represent a real decrease (e.g. where
	x+h = x due to finite precision)

2006-07-29  Brian Gough  <bjg@network-theory.co.uk>

	* evolve.c (gsl_odeiv_evolve_apply): notify user of step-size
	which caused any failure by returning it

2006-06-13  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_odeiv.h, control.c (gsl_odeiv_control_hadjust): change y0 to
	y in prototype to avoid conflict with bessel y0() in math.h

	* test.c (test_odeiv_stepper): change y0 to ystart

2005-04-08  Brian Gough  <bjg@network-theory.co.uk>

	* Fixed all functions to consistently return status instead of
	GSL_EBADFUNC.

2004-12-29  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_compare_vanderpol): avoid variable size array
	(test_compare_oregonator): as above

2004-12-23  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_evolve_xsin): changed description from "failures"
	to "errors"

2004-12-22  Brian Gough  <bjg@network-theory.co.uk>

	* rk2simp.c (rk2simp_step): added missing static declaration

	* gear1.c (gear1_step): added missing static declaration

	* gear2.c (gear2_step): added missing static declaration

	* rk4imp.c (rk4imp_step): added missing static declaration

	* rk4.c (rk4_step): added missing static declaration

	* rk2imp.c (rk2imp_step): added missing static declaration

2004-12-01  Brian Gough  <bjg@network-theory.co.uk>

	* updated all solvers to ensure correct handling of error codes
	from user defined functions

	* test.c (rhs_xsin): added a test which includes failures of the
	function itself and jacobian

2004-11-25  Brian Gough  <bjg@network-theory.co.uk>

	* gear2.c (gear2_alloc): added check for non-allocation of primer,
	and two-step error estimation

2004-11-23  Brian Gough  <bjg@network-theory.co.uk>

	* gear1.c (gear1_apply): use 90% error bound

	* rk2imp.c (rk2imp_apply): use 90% error bound
